<resources>
    <string name="app_name">Gradify</string>
    <string name="action_settings">Settings</string>
    <string name="cubix_text_1">CU</string>
    <string name="cubix_text_2">BIX</string>
    <string name="cubix_text_3">+</string>
    <string name="cubix_text_full">CUBIX</string>
    <string name="menu_choose_portal">I\'m a…</string>
    <string name="teacher_txt">Teacher</string>
    <string name="student_txt">Student</string>
    <string name="teacher_img_desc">Teacher Picture</string>
    <string name="student_img_desc">Student Picture</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="not_a_member_yet">Not a member yet? Sign up</string>
    <string name="teacher_login">Teacher Log in:</string>
    <string name="student_login">Student Log in:</string>
    <string name="last_name">     Last Name:</string>
    <string name="first_name">   First Name:</string>
    <string name="middle_name">   Middle Name:</string>
    <string name="id_no">   ID No.</string>
    <string name="username">       Username:</string>
    <string name="password">       Password:</string>
    <string name="email">     Email:</string>
    <string name="allterms"> I accepted all Terms &amp; Conditions</string>
    <string name="welcome">W E L C O M E</string>
    <string name="background_desc">Background for Gradify</string>
    <string name="gradify_logo">Logo for Gradify</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="addcalass">addcalass</string>
    <string name="moreinfo">moreinfo</string>
    <string name="leaderboard">leaderboard</string>
    <string name="homepage">homepage</string>
    <string name="message">message</string>
    <string name="notif">notif</string>
    <string name="gradesheet">gradesheet</string>
    <string name="addclass">addclass</string>
    <string name="popup_desc">Interactive Grading System for Teachers</string>
    <string name="archive">Archived</string>
    <string name="ongoing">Ongoing</string>
    <string name="all">All</string>
    <string name="your_classes"> Your Classes </string>
    <string name="subject_code"> Subject Code </string>
    <string name="subject_section">  Subject Section</string>
    <string name="subject_description">  Subject Description</string>
    <string name="room_number">  Room No.</string>
    <string name="building">  Building</string>
    <string name="manage_students"> MANAGE STUDENTS </string>
    <string name="delete"> Delete </string>
    <string name="create_class">  CREATE CLASS </string>
    <string name="your_students">  Your Students </string>
    <string name="add_students">  Add Student </string>
    <string name="edit_class">  Edit Class </string>
    <string name="grading_system">  Grading System </string>
    <string name="category_grading_system">  Category Grading System </string>
    <string name="add_excel">Choose Excel File</string>
    <string name="parent_category_1"> Attendance </string>
    <string name="parent_category1_percent">10 %</string>
    <string name="parent_category_2"> Quizzes </string>
    <string name="parent_category2_percent">10 %</string>
    <string name="parent_category_3"> Project </string>
    <string name="parent_category3_percent">20 %</string>
    <string name="parent_category4"> Exam </string>
    <string name="parent_category4_percent">60 %</string>
    <string name="add_more_category"> Add Category </string>
    <string name="save"> Save </string>
    <string name="class_list"> Class List </string>
    <string name="font1_string">Your Students</string>
    <string name="inserttext_string">Choose Excel File</string>
    <string name="gradifysmalltext_string">GRADIFY </string>
    <string name="add_student_desc">Beep! You have no students in this class.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_bar">Search</string>
    <string name="category"> CAT </string>
    <string name="category_others"> Others </string>
    <string name="sub_category"> SubCategory Title </string>
    <string name="sub_category_date"> Date </string>
    <string name="sub_category_rank"> # </string>
    <string name="student_firstname"> Name </string>
    <string name="student_fullname"> Full Name </string>
    <string name="student_score"> Score </string>
    <string name="overall_percentage">0%</string>
    <string name="text_equivalent_grade">Grade Equivalent:</string>
    <string name="value_equivalent_grade">0.00</string>
    <string name="text_grade_system_breakdown">Grade System Breakdown</string>
    <string name="breakdown_title">Breakdown</string>
    <string name="breakdown_percentage_total">%</string>
    <string name="breakdown_percentage_current">0%</string>
    <string name="text_overall_standing">Overall Standing</string>
    <string name="others_category">Others Category</string>
    <string name="main_floatedit"> Edit </string>
    <string name="main_floatrename"> Rename </string>
    <string name="main_floatdelete"> Delete </string>
    <string name="subject_code_name">  Subject </string>
    <string name="subcategory_title">   Title </string>
    <string name="subcategory_total_points">  Total Points </string>
    <string name="quizzes">  Number of Students </string>
    <string name="Add_cat"> + Add Category </string>
    <string name="add_category"> Add </string>
    <string name="student_passed"> Show only those who have passed </string>
    <string name="recordtext"> Record Score </string>
    <string name="recordscorestext"> Scores </string>
    <string name="recordname"> Name </string>
    <string name="recordidno"> ID No. </string>
    <string name="recordscores"> Score </string>
    <string name="recordnumbering"> No. </string>
    <string name="no1"> 1 </string>
    <string name="no2"> 2 </string>
    <string name="no3"> 3 </string>
    <string name="no4"> 4 </string>
    <string name="no5"> 5 </string>
    <string name="no6"> 6 </string>
    <string name="no7"> 7 </string>
    <string name="no8"> 8 </string>
    <string name="no9"> 9 </string>
    <string name="no10"> 10 </string>
    <string name="s1"> Student 1 score</string>
    <string name="s2"> Student 2 score</string>
    <string name="s3"> Student 3 score</string>
    <string name="s4"> Student 4 score</string>
    <string name="s5"> Student 5 score</string>
    <string name="txtstudentlogin_string">Student Log in:</string>
    <string name="txtrememberme_string">Remember me</string>
    <string name="txtnotamember_string">Not a member yet? Sign  up</string>
    <string name="txtsignin_string">Sign in</string>
    <string name="txtlogin_string">Login</string>
    <string name="txtpassword_string">Password</string>
    <string name="txtlogout_string">Logout</string>
    <string name="txtaboutus_string">About Us</string>
    <string name="txthelp_string">Help</string>
    <string name="txtsettings_string">Settings</string>
    <string name="txtmessages_string">Messages</string>
    <string name="txtnotifications_string">Notifications</string>
    <string name="txtleaderboard_string">Leaderboard</string>
    <string name="txtmyclasses_string">My Classes</string>
    <string name="txtviewprofile_string">View profile</string>
    <string name="fullname_student"> Fullname </string>
    <string name="imgstudent">imgstudent</string>
    <string name="txtclasses_string">auto_stories</string>
    <string name="txtleaderboards_string">social_leaderboard</string>
    <string name="txtsearch_string">Search Name</string>
    <string name="col1">ID #</string>
    <string name="col2">Student Name</string>
    <string name="col3">Letter Grade</string>
    <string name="col4">Exam 1</string>
    <string name="col5">Exam 2</string>
    <string name="col6">Exam 3</string>
    <string name="col7">Exam Avg.</string>
    <string name="col8">Project</string>
    <string name="col9">Quiz 1</string>
    <string name="col10">Quiz 2</string>
    <string name="col11">Quiz 3</string>
    <string name="col12">Quiz 4</string>
    <string name="col13">Quiz 5</string>
    <string name="col14">Quizzes Avg.</string>
    <string name="col15">Attendance 1</string>
    <string name="col16">Attendance 2</string>
    <string name="col17">Attendance 3</string>
    <string name="col18">Attendance 4</string>
    <string name="col19">Attendance 5</string>
    <string name="col20">Grade</string>
    <string name="row"> </string>
    <string name="row1ID">2020-0001</string>
    <string name="row1Name">Barro, Shiela Mae </string>
    <string name="row1Exam1">99</string>
    <string name="row1Exam2">91</string>
    <string name="row1Exam3">98</string>
    <string name="row1Project">98</string>
    <string name="row1Quiz1">49</string>
    <string name="row1Quiz2">46</string>
    <string name="row1Quiz3">98</string>
    <string name="row1Quiz4">94</string>
    <string name="row1Attendance1">10</string>
    <string name="row1Attendance2">10</string>
    <string name="row1Attendance3">10</string>
    <string name="row1Attendance4">10</string>
    <string name="row1Attendance5">10</string>
    <string name="row2ID">2020-0002</string>
    <string name="row2Name">Camama, Reham Dee </string>
    <string name="row2Exam1">96</string>
    <string name="row2Exam2">93</string>
    <string name="row2Exam3">97</string>
    <string name="row2Project">95</string>
    <string name="row2Quiz1">42</string>
    <string name="row2Quiz2">47</string>
    <string name="row2Quiz3">99</string>
    <string name="row2Quiz4">92</string>
    <string name="row2Attendance1">10</string>
    <string name="row2Attendance2">10</string>
    <string name="row2Attendance3">0</string>
    <string name="row2Attendance4">5</string>
    <string name="row2Attendance5">10</string>
    <string name="row3ID">2020-0003</string>
    <string name="row3Name">Dela Peña, Shaira Krizz </string>
    <string name="row3Exam1">94</string>
    <string name="row3Exam2">92</string>
    <string name="row3Exam3">98</string>
    <string name="row3Project">95</string>
    <string name="row3Quiz1">42</string>
    <string name="row3Quiz2">45</string>
    <string name="row3Quiz3">97</string>
    <string name="row3Quiz4">93</string>
    <string name="row3Attendance1">10</string>
    <string name="row3Attendance2">10</string>
    <string name="row3Attendance3">10</string>
    <string name="row3Attendance4">10</string>
    <string name="row3Attendance5">5</string>
    <string name="row4ID">2020-0004</string>
    <string name="row4Name">Ellevera, Paolo Alexis </string>
    <string name="row4Exam1">98</string>
    <string name="row4Exam2">94</string>
    <string name="row4Exam3">95</string>
    <string name="row4Project">97</string>
    <string name="row4Quiz1">47</string>
    <string name="row4Quiz2">48</string>
    <string name="row4Quiz3">90</string>
    <string name="row4Quiz4">91</string>
    <string name="row4Attendance1">10</string>
    <string name="row4Attendance2">10</string>
    <string name="row4Attendance3">10</string>
    <string name="row4Attendance4">10</string>
    <string name="row4Attendance5">10</string>
    <string name="row5ID">2020-0005</string>
    <string name="row5Name">Miranda, Genesis </string>
    <string name="row5Exam1">97</string>
    <string name="row5Exam2">98</string>
    <string name="row5Exam3">96</string>
    <string name="row5Project">99</string>
    <string name="row5Quiz1">45</string>
    <string name="row5Quiz2">40</string>
    <string name="row5Quiz3">95</string>
    <string name="row5Quiz4">95</string>
</resources>