<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/horizontalScrollView"
	android:layout_width="match_parent"
	android:layout_height="match_parent">


	<ImageView
		android:id="@+id/imgBackground"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:contentDescription="@string/background_desc"
		android:scaleType="centerInside"
		android:visibility="visible"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/background2" />


	<LinearLayout
		android:id="@+id/linearLayout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="50dp"
		android:orientation="vertical"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/imgBackground">

		<TextView
			android:id="@+id/gradifybigtext"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/app_name"
			android:textColor="@color/white"
			android:textSize="55sp"
			android:textStyle="bold" />

		<ImageView
			android:id="@+id/gradifybiglogo"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:adjustViewBounds="true"
			android:contentDescription="@string/gradify_logo"
			android:cropToPadding="false"
			android:scaleType="centerInside"
			android:src="@drawable/img_gradifybiglogo" />
	</LinearLayout>

	<ImageView
		android:id="@+id/imgstudent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="41dp"
		android:layout_marginEnd="7dp"
		android:contentDescription="@string/student_img_desc"
		android:src="@drawable/img_student"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/imgteacher"
		app:layout_constraintTop_toBottomOf="@+id/textchoose" />


	<ImageView
		android:id="@+id/imgteacher"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="41dp"
		android:layout_marginEnd="19dp"
		android:contentDescription="@string/teacher_img_desc"
		android:src="@drawable/img_teacher"
		app:layout_constraintEnd_toStartOf="@+id/imgstudent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textchoose" />

	<TextView
		android:id="@+id/txtstudent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="11dp"
		android:layout_marginEnd="2dp"
		android:gravity="center"
		android:text="@string/student_txt"
		android:textColor="@color/white"
		android:textSize="24sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/txtteacher"
		app:layout_constraintTop_toBottomOf="@+id/imgstudent" />

	<TextView
		android:id="@+id/txtteacher"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:layout_marginEnd="19dp"
		android:gravity="center"
		android:text="@string/teacher_txt"
		android:textColor="@color/white"
		android:textSize="24sp"
		app:layout_constraintEnd_toStartOf="@+id/txtstudent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imgteacher" />

	<TextView
		android:id="@+id/textchoose"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="31dp"
		android:gravity="center"
		android:text="@string/menu_choose_portal"
		android:textColor="@color/white"
		android:textSize="24sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>