<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/horizontalScrollView"
	android:layout_width="match_parent"
	android:layout_height="match_parent">


	<ImageView
		android:id="@+id/imgBackground"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:contentDescription="@string/background_desc"
		android:scaleType="centerCrop"
		android:visibility="visible"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/img_background2"
		tools:ignore="ImageContrastCheck" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/linearLayout"
		android:layout_width="191dp"
		android:layout_height="265dp"
		android:layout_marginTop="50dp"
		android:gravity="center_horizontal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">


		<TextView
			android:id="@+id/textView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/pragati_narrow"
			android:gravity="center"
			android:text="@string/cubix_text_1"
			android:textColor="@color/black"
			android:textSize="55sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toStartOf="@+id/textView2"
			app:layout_constraintHorizontal_bias="1.0"
			app:layout_constraintStart_toStartOf="parent"
			tools:layout_editor_absoluteY="1dp"
			tools:ignore="MissingConstraints" />

		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="1dp"
			android:layout_marginEnd="21dp"
			android:fontFamily="@font/pragati_narrow"
			android:text="@string/cubix_text_2"
			android:textColor="@color/light_gray"
			android:textSize="55sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="@+id/textView3"
			app:layout_constraintTop_toTopOf="parent"
			tools:ignore="TextContrastCheck" />

		<TextView
			android:id="@+id/textView3"
			android:layout_width="wrap_content"
			android:layout_height="64dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="17dp"
			android:fontFamily="@font/pragati_narrow"
			android:text="@string/cubix_text_3"
			android:textColor="@color/black"
			android:textSize="50sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:ignore="TextSizeCheck" />

		<ImageView
			android:id="@+id/imageView3"
			android:layout_width="191dp"
			android:layout_height="172dp"
			android:layout_marginTop="94dp"
			android:adjustViewBounds="true"
			android:contentDescription="@string/gradify_logo"
			android:cropToPadding="false"
			android:scaleType="centerInside"
			android:src="@drawable/logo_cubixicon"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:ignore="ImageContrastCheck" />

	</androidx.constraintlayout.widget.ConstraintLayout>


	<ImageButton
		android:id="@+id/imgstudent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="52dp"
		android:backgroundTint="#00FFFFFF"
		android:contentDescription="@string/student_img_desc"
		android:src="@drawable/img_student"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textchoose"
		tools:ignore="ImageContrastCheck" />

	<ImageButton
		android:id="@+id/imgteacher"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="56dp"
		android:layout_marginTop="20dp"
		android:backgroundTint="#00FFFFFF"
		android:contentDescription="@string/teacher_img_desc"
		android:src="@drawable/img_teacher"
		app:layout_constraintEnd_toStartOf="@+id/imgstudent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textchoose"
		tools:ignore="ImageContrastCheck" />

	<TextView
		android:id="@+id/txtstudent"
		android:layout_width="117dp"
		android:layout_height="30dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="72dp"
		android:fontFamily="@font/poppins"
		android:gravity="center"
		android:text="@string/student_txt"
		android:textColor="@color/white"
		android:textSize="24sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imgstudent"
		tools:ignore="TextContrastCheck" />

	<TextView
		android:id="@+id/txtteacher"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="72dp"
		android:layout_marginTop="21dp"
		android:fontFamily="@font/poppins"
		android:gravity="center"
		android:text="@string/teacher_txt"
		android:textColor="@color/white"
		android:textSize="24sp"
		app:layout_constraintEnd_toStartOf="@+id/txtstudent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imgteacher"
		tools:ignore="TextContrastCheck" />

	<TextView
		android:id="@+id/textchoose"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:fontFamily="@font/poppins"
		android:gravity="center"
		android:text="@string/menu_choose_portal"
		android:textColor="@color/white"
		android:textSize="24sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/linearLayout"
		tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>