<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/background5"
        android:layout_width="463dp"
        android:layout_height="921dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/img_background2"
        android:contextClickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="324dp"
        android:layout_height="26dp"

        android:layout_marginTop="241dp"
        android:background="#83FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no3"
        android:layout_width="25dp"
        android:layout_height="21dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/breakdown_title"
        android:text="@string/recordnumbering"
        android:textColor="#335C2C"
        android:textColorHint="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toStartOf="@+id/fullname6"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/fullname6"
        android:layout_width="68dp"
        android:layout_height="19dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/breakdown_title"
        android:text="@string/fullname_student"
        android:textColor="#335C2C"
        android:textColorHint="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toStartOf="@+id/score3"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.428"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/score3"
        android:layout_width="39dp"
        android:layout_height="15dp"
        android:layout_marginEnd="36dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/breakdown_title"
        android:text="@string/student_score"
        android:textColor="#335C2C"
        android:textColorHint="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.272"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>